# TodoList

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: github_actions.yaml
bot/: models.py  serializers.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_rename_user_tguser_user_id.py  0003_alter_tguser_tg_id.py  0004_rename_user_id_tguser_user.py
bot/tg/: client.py  dc.py
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: .env  docker-compose.yaml  nginx.conf
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_alter_goal_priority_alter_goal_status.py  0004_goalcomment.py  0005_board_alter_goal_category_alter_goalcomment_user_and_more.py  0006_create_new_objects.py  0007_alter_boardparticipant_board_and_more.py
tests/: conftest.py  factories.py
tests/core/: core_test.py
tests/goals/: board_test.py
todolist/: settings.py  urls.py
